--- a/genindex.html
+++ b/genindex.html
@@ -603,6 +603,8 @@
           <li><a href="core.html#core.events.Event.description">(core.events.Event attribute)</a>
 </li>
         </ul></li>
+        <li><a href="core.html#core.logging_config.SafeRotatingFileHandler.doRollover">doRollover() (core.logging_config.SafeRotatingFileHandler method)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -745,6 +747,8 @@
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_current_time">get_current_time() (services.db_service.DatabaseService method)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_db_file_path">get_db_file_path() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.link_resolver.LinkResolver.get_display_name">get_display_name() (services.link_resolver.LinkResolver method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_entities">get_entities() (services.db_service.DatabaseService method)</a>
@@ -775,10 +779,10 @@
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_marker">get_marker() (services.db_service.DatabaseService method)</a>
 </li>
-        <li><a href="services.html#services.db_service.DatabaseService.get_marker_by_composite">get_marker_by_composite() (services.db_service.DatabaseService method)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="services.html#services.db_service.DatabaseService.get_marker_by_composite">get_marker_by_composite() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.get_markers_for_map">get_markers_for_map() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_markers_for_object">get_markers_for_object() (services.db_service.DatabaseService method)</a>
@@ -1097,6 +1101,8 @@
 </li>
         <li><a href="services.html#services.longform_builder.read_all_longform_items">read_all_longform_items() (in module services.longform_builder)</a>
 </li>
+        <li><a href="services.html#services.db_service.DatabaseService.register_backup_service">register_backup_service() (services.db_service.DatabaseService method)</a>
+</li>
         <li><a href="services.html#services.longform_builder.reindex_document_positions">reindex_document_positions() (in module services.longform_builder)</a>
 </li>
         <li><a href="services.html#services.longform_builder.remove_from_longform">remove_from_longform() (in module services.longform_builder)</a>
@@ -1125,6 +1131,8 @@
   <h2>S</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="core.html#core.logging_config.SafeRotatingFileHandler">SafeRotatingFileHandler (class in core.logging_config)</a>
+</li>
         <li><a href="services.html#services.worker.DatabaseWorker.save_current_time">save_current_time() (services.worker.DatabaseWorker method)</a>
 </li>
         <li>
@@ -1312,6 +1320,10 @@
 <section id="V" class="genindex-section">
   <h2>V</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="services.html#services.db_service.DatabaseService.vacuum">vacuum() (services.db_service.DatabaseService method)</a>
+</li>
+    </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="core.html#core.calendar.CalendarConfig.validate">validate() (core.calendar.CalendarConfig method)</a>
 </li>
