--- a/genindex.html
+++ b/genindex.html
@@ -484,6 +484,8 @@
           <li><a href="commands.html#module-commands.wiki_commands">module</a>
 </li>
         </ul></li>
+        <li><a href="services.html#services.worker.DatabaseWorker.completer_data_loaded">completer_data_loaded (services.worker.DatabaseWorker attribute)</a>
+</li>
         <li><a href="services.html#services.db_service.DatabaseService.connect">connect() (services.db_service.DatabaseService method)</a>
 </li>
         <li>
@@ -912,6 +914,8 @@
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_calendar_config">load_calendar_config() (services.worker.DatabaseWorker method)</a>
 </li>
+        <li><a href="services.html#services.worker.DatabaseWorker.load_completer_data">load_completer_data() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_current_time">load_current_time() (services.worker.DatabaseWorker method)</a>
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_entities">load_entities() (services.worker.DatabaseWorker method)</a>
@@ -920,10 +924,10 @@
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_event_details">load_event_details() (services.worker.DatabaseWorker method)</a>
 </li>
-        <li><a href="services.html#services.worker.DatabaseWorker.load_events">load_events() (services.worker.DatabaseWorker method)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="services.html#services.worker.DatabaseWorker.load_events">load_events() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_graph_data">load_graph_data() (services.worker.DatabaseWorker method)</a>
 </li>
         <li><a href="services.html#services.worker.DatabaseWorker.load_grouping_dialog_data">load_grouping_dialog_data() (services.worker.DatabaseWorker method)</a>
