deploy: bbe469e0dabce41165a0a74e78e4ddf21a53e93c

--- a/_modules/services/db_service.html
+++ b/_modules/services/db_service.html
@@ -2716,7 +2716,7 @@
 
 <div class="viewcode-block" id="DatabaseService.register_backup_service">
 <a class="viewcode-back" href="../../services.html#services.db_service.DatabaseService.register_backup_service">[docs]</a>
-    <span class="k">def</span><span class="w"> </span><span class="nf">register_backup_service</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">backup_service</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">register_backup_service</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">backup_service</span><span class="p">:</span> <span class="n">Any</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Registers a backup service for integration with database operations.</span>
 
